--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
--- Premonitions Site --
+== Premonitions Site 
 
 This site provide the essential information about premonitions reports in around the world. 
+
