omniauth-twitter and mongoid

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
 == Premonitions Site 
 
-This site provide the essential information about premonitions reports in around the world. 
+This site provides the essential information about premonitions all over the world. 
 
